--- a/styles/personal.module.css
+++ b/styles/personal.module.css
@@ -21,3 +21,30 @@
 .center{
     text-align: center;
 }
+
+.cont{
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.575);
+}
+
+.chargement {
+    border: 12px solid #000;
+    border-radius: 50%;
+    border-top: 12px solid #DDD;
+    width: 80px;
+    height: 80px;
+    animation: spin 2s linear infinite;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+  }
+  
+  @keyframes spin {
+    100% {
+      transform: rotate(360deg);
+    }
+  }
